--- a/main.rmd
+++ b/main.rmd
@@ -15,6 +15,7 @@ library(dplyr)
 library(ggplot2)
 library(readr)
 library(ckanr)
+library(janitor)
 library(DBI)
 # get package
 
@@ -32,25 +33,62 @@ resources <- list_package_resources("64b54586-6180-4485-83eb-81e8fae3b8fe")
 datastore_resources <- filter(resources, tolower(format) %in% c('csv', 'geojson'))
  
 # load the first datastore resource as a sample
-data <- filter(datastore_resources, row_number()==1) %>% get_resource()
+data <- filter(datastore_resources, row_number()==1) %>% 
+  get_resource()
 #datafile1 <- resources %>%
 #  get_resource()
 
-write_csv(data, "datafiles/datafile1.csv")
+data_file <- write_csv(data, "datafiles/datafile1.csv")
 ```
 # Statistical Insights regarding the spread of COVID-19 in Toronto by Sex.
 ## Abstract
 ## Introduction
-During the first quarter of 2020, Canada began to grasp the seriousness of the viral COVID-19 epidemic with various jurisdictions enforcing a combination of restrictions, ranging from mandating face masks in public to fully-blown lockdowns. 
-While there has been great debate on the effectiveness of various specific lockdown restrictions and their effectiveness, and whether such restrictions on civilian freedom are justified, this paper will examine the cumulative impact on the Toronto population. The relative uniqueness of this paper can be attributed to comparing the changes in the spread of COVID-19 and the survival rates of those impacted over multiple time periods, and breaking these numbers down by sex to see if certain groups are more at risk. Furthermore, a statistical analysis between how contracting the virus via different media impacts neighborhood-specific spread and COVID-19 mortality rates.
+During the first quarter of 2020, Canada began to grasp the seriousness of the viral COVID-19 epidemic. Various jurisdictions started enforcing a combination of restrictions, ranging from mandating face masks in public to fully-blown lockdowns. 
+While there has been great debate on the effectiveness of various specific lockdown restrictions and their effectiveness, and whether such restrictions on civilian freedom are justified, this paper will examine the impact on the Toronto population. It will compare the frequencies of contracted COVID-19 by demographic factors such as age and sex against multiple time frames. The latter will help us deduce whether the weather has any statistically significant impact on both the spread of the virus and the recovery rates.It will also further test whether weather has an impact on the recovery rates of COVID-19 victims that are deemed vulnerable due to age, if it is determined to be the case.
 
 ## Data
 
-### Variations between the frequency of COVID-19 contracted via different media in different time periods:
+### Variations between the frequency of COVID-19 contracted in different age groups by date
 
 ```{r}
+library(ggplot2)
 data_dates <- data %>%
   arrange(`Reported Date`)
 
+ggplot2(data, aes(data$`Reported Date`, data$`Age Group`))
++ geom_bar(
+    mapping = NULL,
+  data = NULL,
+  stat = "count",
+  position = "stack",
+  ...,
+  width = NULL,
+  na.rm = FALSE,
+  orientation = NA,
+  show.legend = NA,
+  inherit.aes = TRUE
+)
+              
+      
+```
+
+### Variation in the frequency of contracting COVID-19 by sex over time
+
+
+
+```{r}
+
+
 
 ```
+
+
+
+### Variations in the frequency of contracting COVID-19 by sex and age over time
+
+```{r}
+
+
+```
+
+### Recovery rates from COVID-19 
